restart this blog.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+<body>
+
+<h1>Hello world</h1>
+
+<p>I restart this blog from today and will sharing some thoughts and knowledge here.</p>
+
+</body>
+</html>
